# log-analytics-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yaml  pr.yaml
app/: analyzer.py  cloudwatch_client.py  main.py  s3_client.py  sns_client.py
app/tests/: test_analyzer.py  test_s3_client.py
app/tests/fixtures/: sample.jsonl
terraform/: alb.tf  backend.tf  cloudfront.tf  ecr.tf  ecs.tf  iam.tf  networking.tf  outputs.tf  sns.tf  task-definition.json  terraform.tfvars  variables.tf
